--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,13 +22,55 @@
   margin-top:88vh;
   margin-left:30%;
 }
+.wish{
+ margin-left: 2%;
+}
+.wishList{
+  position: absolute;
+  width: 500px;
+  height: 400px;
+  background-color:white;
+  margin-top:7%;
+  left: 35%;
+  z-index: 300;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 30px black;
+  gap:5px;
+  border-radius: 20px;
+  transition: 5s;
+  display: none;
+}
+.wishList img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+.crossDiv{
+  width:40px;
+  height:40px;
+  margin-top:-100%;
+}
+
+.wishList .fa-solid{
+  position: absolute;
+  top:5px;
+  right:5px;
+  z-index: 1000;
+  color:black;
+}
+.oo{
+  width:30px;
+  height:30px;
+  background-color:red;
+}
 .main-box, .Shop_box, .categories_box{
   width: 100%;
   height: 100vh;
 }
 .Shop_box{
   color:grey;
-  overflow-y:scroll;
   min-height: 100vh;
 }
 /*Home*/
@@ -234,18 +276,20 @@
   display: flex;
   align-items: space-between;
   flex-shrink: 0;
+  transition: 1s;
 }
 .product_img img{
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  
 }
 .product_img{
   position: absolute;
   width: 100%;
   height: 70%;
 }
+
 .details{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   position: absolute;
@@ -257,12 +301,14 @@
   align-items: center;
   justify-content: space-around;
   flex-shrink: 3;
-
 }
 .price{
   display: flex;
   gap:30%;
   font-size: 11px;
+  align-items: center;
+  justify-content: center;
+  
 }
 .price button{
   background-color: white;
@@ -274,7 +320,6 @@
 }
 .price button:hover{
   background-color: green;
-  width: 52px ;
 }
 
 /*Categories*/
@@ -326,11 +371,11 @@
   color: white;
   font-size: 30px;
   flex:1;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: -20px;
 }
 .company_info{
   display: flex;
-  justify-self: space-between;
   width: 90%;
   flex:2;
   align-items: center;
@@ -339,11 +384,11 @@
   margin-top: -40px;
 }
 .company_info p{
-  width:200px;
+  width:25%;
   color: white;
   font: bold;
+  font-size: 16px;
   margin-right: auto;
-  box-shadow: 2px 2px 2px hotpink;
   font-family: 'Times New Roman', Times, serif;
 }
 .company_info img{
@@ -359,38 +404,15 @@
   bottom: 0;
   display: flex;
   align-items: center;
-  background-color:hotpink;
   justify-content: space-around;
 }
 .delivery p{
-  width:150px;
-  color: white;
+  width:20%;
+  color: black;
   font-size: 16px;
   font-family: 'Times New Roman', Times, serif;
 }
-section{
-  display: flex;
-  width:90%;
-  height: 90%;
-  justify-content: center;
-  align-items: center;
-  gap:10px;
-}
 
-section div{
-  width:30%;
-  aspect-ratio: 1/1;
-  display: flex;
-  align-items:center;
-  justify-content: center;
-  flex-direction: column;
-}
-section .social1 img{
-  width:80%;
-  height:80%;
-  box-shadow: 2px 2px 10px black;
-  border-radius: 10px;
-}
 /* for 600px screens and below*/
 @media only screen and (max-width:600px){
   /*Home*/
@@ -447,26 +469,6 @@ section .social1 img{
     gap:20px;
     overflow: hidden;
   }
-  .social1{
-    width:180px;
-    height: 180px;
-  }
 
-}
-.email{
-  width:200px;
-  height:200px;
-  border-radius:10px;
-  object-fit:cover;
-  position:absolute;
-  top:100px;
-  border-style: solid;
-  object-position: top;
-}
-#next{
-  position: absolute;
-  top:70px;
-  width:40px;
-  height: 20px;
-  background-color:red;
+
 }
