--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -172,6 +172,7 @@
   box-shadow:0 5px 15px black;
   border-radius: 50%;
 }
+
 .productDetail{
   aspect-ratio: 1/1;
   width:35%;
@@ -330,6 +331,7 @@
   gap:10px;
   align-items: center;
 }
+
 .cakes{
   width: 100%;
   height:200px;
@@ -357,9 +359,7 @@
     font-size: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: normal;
-    position: sticky;
-    left:0;
-    height: 100%;
+    left:-1px;
     background-color: white;
     }
     /*About*/
@@ -477,6 +477,13 @@
   .cakes{
     overflow-x: scroll;
     scroll-behavior: smooth;
+    padding-left: 40px;
+  }
+  .cakes p{
+    background-color: rgb(255, 255, 255);
+    z-index: 20;
+    position: absolute;
+    height: 150px;
   }
  
  .company_info p, .delivery p{
