--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -62,7 +62,7 @@
 }
 .main-box, .Shop_box, .categories_box{
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 .Shop_box{
   color:grey;
@@ -101,11 +101,14 @@
 #icons{
   display: flex;
   gap:30px;
+  color: white;
+  position: fixed;
+  left:40%;
 }
 
 
 #icons i:hover{
-  color: brown;
+  color:red;
 }
 
 
@@ -120,7 +123,7 @@
   color: transparent;
   margin-left:20px;
   font-weight: bold;
-  -webkit-text-stroke: 1px rgb(0, 35, 41);
+  color: aliceblue;
   cursor: pointer;
 }
 .sub-box{
@@ -145,6 +148,7 @@
   display: flex;
   align-items: center;  
   justify-content: space-around;
+
 }
 .grand-child1{
   margin-left:0 ;
@@ -161,7 +165,6 @@
   border-radius: 50%;
   right:10%;
   position: relative;
-  background-color: red;
 }
 .childImg img{
   position:absolute;
@@ -180,7 +183,6 @@
   flex-direction: column;
   justify-content: center;
   gap:20px;
- 
 }
 #order{
   width:150px;
@@ -421,6 +423,7 @@
 @media only screen and (max-width:600px){
   /*Home*/
   .grand-child1, .grand-child2, .grand-child3{
+    top:-10%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -430,8 +433,8 @@
 
   .productDetail{
     width:100%;
-    height: 70%;
-    gap:20px;
+    height: 50%;
+    gap:10px;
     padding-left: 30px;
   }
   h2{
@@ -445,15 +448,27 @@
   font-size:30px;
  }
  .childImg{
-    width:55%;
-    margin-left: 20%;
-    margin-top: -20%;
+    width: 100%;
+    height: 50%;
+    border-radius: 0;
+    position: static;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
  }
+ .childImg img{
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  box-shadow:0 5px 15px black;
+  border-radius: 50%;
+}
+
  .home_nav{
   height:15%;
   box-shadow:0 1px 1px black;
-  
  }
+
  #icons{
   display:none;
  }
@@ -508,6 +523,16 @@
   width:70%;
 }
 
+}
+@media only screen and (max-width:300px){
+  .childImg img{
+    width:180px;
+    height:180px;
+  }
+  .productDetail{
+    height:60%;
+    gap:1px;
+  }
 }
 
 
